# agentic-evolve

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  INSTALL.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/agentic-evolve-cli/: Cargo.toml
crates/agentic-evolve-cli/src/: main.rs
crates/agentic-evolve-cli/src/commands/: body.rs  collective.rs  compose.rs  coverage.rs  crystallize.rs  info.rs  match_cmd.rs  mod.rs  optimize.rs  pattern.rs  server.rs  stats.rs
crates/agentic-evolve-core/: Cargo.toml
crates/agentic-evolve-core/benches/: core_bench.rs
crates/agentic-evolve-core/src/: bridges.rs  lib.rs
crates/agentic-evolve-core/src/cache/: invalidation.rs  lru.rs  metrics.rs  mod.rs
crates/agentic-evolve-core/src/collective/: decay.rs  mod.rs  promotion.rs  success.rs  usage.rs
crates/agentic-evolve-core/src/composition/: adapter.rs  composer.rs  gap_filler.rs  mod.rs  weaver.rs
crates/agentic-evolve-core/src/crystallization/: confidence.rs  extractor.rs  mod.rs  template_generator.rs  variable_detector.rs
crates/agentic-evolve-core/src/matching/: composite.rs  context.rs  fuzzy.rs  mod.rs  semantic.rs  signature.rs
crates/agentic-evolve-core/src/metrics/: audit.rs  conservation.rs  mod.rs  tokens.rs
crates/agentic-evolve-core/src/optimization/: cache.rs  mod.rs  optimizer.rs
crates/agentic-evolve-core/src/query/: budget.rs  delta.rs  intent.rs  mod.rs  pagination.rs
crates/agentic-evolve-core/src/storage/: format.rs  index.rs  mod.rs  store.rs  versioner.rs
crates/agentic-evolve-core/src/types/: error.rs  ids.rs  match_result.rs  mod.rs  pattern.rs  skill.rs
crates/agentic-evolve-core/tests/: conservation.rs  phase1_types.rs  phase2_storage.rs  phase3_matching.rs  phase4_crystallization.rs  phase5_composition.rs  phase6_collective.rs  phase7_bridges.rs  phase8_optimization.rs  phase9_edge_stress.rs
crates/agentic-evolve-ffi/: Cargo.toml
crates/agentic-evolve-ffi/src/: lib.rs
crates/agentic-evolve-mcp/: Cargo.toml
crates/agentic-evolve-mcp/src/: lib.rs  main.rs  session.rs
crates/agentic-evolve-mcp/src/protocol/: compact.rs  handler.rs  mod.rs  negotiation.rs
crates/agentic-evolve-mcp/src/tools/: evolve_compose.rs  evolve_confidence.rs  evolve_coverage.rs  evolve_crystallize.rs  evolve_get_body.rs  evolve_match_context.rs  evolve_match_signature.rs  evolve_optimize.rs  evolve_pattern_delete.rs  evolve_pattern_get.rs  evolve_pattern_list.rs  evolve_pattern_search.rs  evolve_pattern_store.rs  evolve_update_usage.rs  mod.rs  registry.rs
crates/agentic-evolve-mcp/src/transport/: framing.rs  mod.rs  stdio.rs
crates/agentic-evolve-mcp/src/types/: capabilities.rs  error.rs  message.rs  mod.rs  notification.rs  request.rs  response.rs
crates/agentic-evolve-mcp/tests/: phase1_types.rs  phase2_protocol.rs  phase3_tools.rs
docs/: quickstart.md
docs/public/: api-reference.md  architecture.md  benchmarks.md  cli-reference.md  command-surface.md  concepts.md  configuration.md  experience-with-vs-without.md  faq.md  ffi-reference.md  file-format.md  initial-problem-coverage.md  installation.md  integration-guide.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  overview.md  playbooks-agent-integration.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  sister.manifest.json  troubleshooting.md
examples/: README.md
npm/: Cargo.toml
npm/wasm/: Cargo.toml
paper/paper-i-pattern-library/: agenticevolve-paper.tex  references.bib
python/: pyproject.toml
scripts/: bench.sh  check-canonical-consistency.sh  check-canonical-sister.sh  check-command-surface.sh  check-install-commands.sh  check-mcp-consolidation.sh  install.sh  test-primary-problems.sh
