[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aevolve-installer"
version = "0.1.0"
description = "Installer for AgenticEvolve pattern library engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Agentra Labs" },
]
keywords = ["ai", "agent", "pattern", "evolve", "codegen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/agentralabs/agentic-evolve"
Documentation = "https://github.com/agentralabs/agentic-evolve/tree/main/docs"
Repository = "https://github.com/agentralabs/agentic-evolve"

[project.scripts]
aevolve-install = "aevolve_installer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
