[package]
name = "agentic-evolve-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI tool for AgenticEvolve"
keywords = ["ai", "agent", "pattern", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "evolve"
path = "src/main.rs"

[dependencies]
agentic-evolve-core = { workspace = true }
agentic-evolve-mcp = { path = "../agentic-evolve-mcp" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = "1"
tokio = { workspace = true }
chrono = { workspace = true }
