[package]
name = "agentic-evolve-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pattern library engine for AI agents - crystallizes and reuses verified code patterns"
keywords = ["ai", "agent", "pattern", "evolve", "codegen"]
categories = ["development-tools", "data-structures"]

[lib]
name = "agentic_evolve_core"
path = "src/lib.rs"

[dependencies]
agentic-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
blake3 = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_bench"
harness = false
