[package]
name = "agentic-evolve-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FFI bindings for AgenticEvolve"
keywords = ["ffi", "pattern", "ai", "agent", "bindings"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agentic-evolve-core = { workspace = true }
