[package]
name = "agentic-evolve-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server for AgenticEvolve - pattern library for AI agents"
keywords = ["mcp", "llm", "pattern", "agent", "ai"]
categories = ["development-tools"]

[lib]
name = "agentic_evolve_mcp"
path = "src/lib.rs"

[[bin]]
name = "agentic-evolve-mcp"
path = "src/main.rs"

[dependencies]
agentic-evolve-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
thiserror = "2"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
