[package]
name = "agentic-evolve-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for agentic-evolve pattern library engine"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-evolve"
homepage = "https://agentralabs.tech"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
